--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-python": "^6.1.6",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
@@ -19,6 +22,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "@uiw/codemirror-theme-solarized": "^4.23.6",
     "@uiw/react-codemirror": "^4.23.6",
+    "axios": "^1.7.9",
     "codemirror": "^6.0.1",
     "commands": "^0.0.7",
     "randomcolor": "^0.6.2",
